DLN-292 fix alignment of inputs

--- a/src/components/orderInput/orderInput.sass
+++ b/src/components/orderInput/orderInput.sass
@@ -36,6 +36,7 @@
 					font-family: 'Raleway'
 					padding-top: 0
 					padding-bottom: 0
+					padding-left: 10px
 					line-height: 34px
 
 			.loader
