--- a/src/components/orderInput/shopSelect/shopSelect.sass
+++ b/src/components/orderInput/shopSelect/shopSelect.sass
@@ -6,8 +6,5 @@
 		border: 1px solid black
 		border-radius: 0
 
-		.Select-value
-			padding-left: 14px
-
 .Select-input
 	height: unset
